# flask-example

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  lefthook.yml  pyproject.toml  wsgi.py
app/: __init__.py  config.py  dependencies.py  exceptions.py  extensions.py  repositories.py
app/auth/: auth_routes.py  auth_service.py  decorators.py  jwt.py  oauth.py
app/messages/: message_events.py  message_model.py  message_repository.py  message_routes.py  message_service.py
app/threads/: thread_member_model.py  thread_model.py  thread_repository.py  thread_routes.py  thread_service.py
app/users/: user_model.py  user_oauth_account_model.py  user_oauth_account_repository.py  user_repository.py  user_routes.py  user_service.py
docs/superpowers/plans/: 2026-04-11-flask-chat-app.md  2026-04-12-react-frontend.md  2026-04-22-flask-manifesto.md
docs/superpowers/specs/: 2026-04-11-flask-chat-app-design.md  2026-04-12-react-frontend-design.md  2026-04-22-flask-manifesto-design.md
manifesto/: index.html
migrations/versions/: 993a091ec873_initial_models.py
tests/: conftest.py
tests/e2e/: chat_flow_test.py
tests/integration/auth/: auth_routes_test.py
tests/integration/messages/: message_events_test.py  message_routes_test.py
tests/integration/threads/: thread_routes_test.py
tests/integration/users/: user_routes_test.py
tests/unit/: smoke_test.py
tests/unit/auth/: auth_service_test.py
tests/unit/messages/: message_repository_test.py  message_service_test.py
tests/unit/threads/: thread_repository_test.py  thread_service_test.py
(+3 files in other folders)
